...
                    }
                    /*Button(action: { login() }) {
                        Text("Sign in")
                    }*/
                }.padding(.bottom, 10)
                NavigationLink(destination: MapBoxMapView()) {
                    Text("Forgot password?")
                        .font(Font.custom("PTMono-Bold", size: 18))
                }.padding(.bottom, 100)
                HStack {
                    Text("Don't have an account? ").font(Font.custom("PTMono-Bold", size: 18))
                    NavigationLink(destination: MapBoxMapView()) {
                        Text("Sign up")
...
